--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@inertiajs/vue3": "^1.2.0",
+        "@vitejs/plugin-vue": "^5.0.5",
         "sweetalert2": "^11.6.13"
     }
 }
